--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -17,7 +17,7 @@
     </div>
     <br>
     <!-- 목록 출력 영역 -->
-    <!--<table class="table table-horizontal table-bordered">
+    <table class="table table-horizontal table-bordered">
         <thead class="thead-strong">
         <tr>
             <th>게시글번호</th>
@@ -36,7 +36,7 @@
             </tr>
         {{/posts}}
         </tbody>
-    </table>-->
+    </table>
 </div>
 
 {{>layout/footer}}
